// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the feedback popup if feedback is not required 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="c8"
    >
      <div
        class="c9"
      >
        <a
          class="c10"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`feedback actions on no click asks for the reason 1`] = `
.c13.c13.c13 {
  background-color: transparent !important;
  color: #1F73B7 !important;
  border-color: #1F73B7 !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c13.c13.c13:not([disabled]):hover,
.c13.c13.c13:not([disabled]):active,
.c13.c13.c13:not([disabled]):focus {
  color: #FFFFFF !important;
  background-color: #1F73B7 !important;
  border-color: #1F73B7 !important;
}

.c11 {
  margin: 0 auto;
  width: 85%;
}

.c12 {
  margin-bottom: 0.7142857142857143rem !important;
  width: 100%;
}

.c14 {
  width: 100%;
}

.c9 {
  background-color: #fff;
  padding: 1.1428571428571428rem 0;
}

.c10 {
  text-align: center;
  margin-bottom: 0.7142857142857143rem;
  font-size: 0.9285714285714286rem;
  font-weight: normal;
  color: #333;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <div
      class="c8"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="c9"
      >
        <h3
          class="c10"
        >
          Please tell us why.
        </h3>
        <div
          class="c11"
        >
          <button
            class="c12 c13 index__c-btn___3y2Qe "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="pill-button"
            tabindex="0"
            type="button"
          >
            It's related, but it didn't answer my question
          </button>
          <button
            class="c14 c13 index__c-btn___3y2Qe "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="pill-button"
            tabindex="0"
            type="button"
          >
            It's not related to my question
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feedback actions on yes click hides the feedback popup 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="c8"
    >
      <div
        class="c9"
      >
        <a
          class="c10"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`passing of scroll container classes 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="c8"
    >
      <div
        class="c9"
      >
        <a
          class="c10"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="c8"
    >
      <div
        class="c9"
      >
        <a
          class="c10"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the expected mobile classes 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content contentMobile"
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external mobile"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="c8"
    >
      <div
        class="c9"
      >
        <a
          class="c10"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the expected title 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Support
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <footer
      class="c8"
    >
      <div
        class="c9"
      >
        <a
          class="c10"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;

exports[`renders the feedback popup after a certain time has passed 1`] = `
.c11.c11.c11 {
  background-color: transparent !important;
  color: #1F73B7 !important;
  border-color: #1F73B7 !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c11.c11.c11:not([disabled]):hover,
.c11.c11.c11:not([disabled]):active,
.c11.c11.c11:not([disabled]):focus {
  color: #FFFFFF !important;
  background-color: #1F73B7 !important;
  border-color: #1F73B7 !important;
}

.c9 {
  background-color: #fff;
  padding: 1.1428571428571428rem 0;
}

.c10 {
  text-align: center;
  margin-bottom: 0.7142857142857143rem;
  font-size: 0.9285714285714286rem;
  font-weight: normal;
  color: #333;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        />
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        />
      </div>
    </div>
    <div
      class="c8"
      data-testid="slide-appear-container"
      role="presentation"
      style="opacity: 1; bottom: 0px;"
    >
      <div
        class="c9"
      >
        <h3
          class="c10"
        >
          Does this article answer your question?
        </h3>
        <div
          class="container buttonCenter "
        >
          <button
            class="c11 index__c-btn___3y2Qe "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="pill-button"
            tabindex="0"
            type="button"
          >
            Yes
          </button>
          <button
            class="c11 index__c-btn___3y2Qe "
            data-garden-container-id="containers.keyboardfocus"
            data-garden-container-version="0.4.4"
            data-garden-id="buttons.button"
            data-garden-version="7.1.10"
            data-testid="pill-button"
            tabindex="0"
            type="button"
          >
            No, I need help
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the help center article 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="widget-header-view"
    >
      <div
        class="c2"
      >
        <h1
          class="c3 c4"
          data-testid="widget-title"
        >
          Help
        </h1>
        <button
          aria-label="Minimize widget"
          class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
          data-garden-container-id="containers.keyboardfocus"
          data-garden-container-version="0.4.4"
          data-garden-id="buttons.icon_button"
          data-garden-version="7.1.10"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="7.1.10"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="c7"
      data-testid="scroll-container-content"
    >
      <div
        class="content "
        data-testid="hc-article"
      >
        <h2
          class="title"
          data-testid="hc-article-title"
        >
          title
        </h2>
        <div
          class="originalArticleButton"
        >
          <a
            aria-label="View original article"
            href="https://example.com"
            target="_blank"
            title="View original article"
          >
            <span
              class="container Icon--link-external"
              data-testid="Icon--link-external"
              type="Icon--link-external"
            >
              <svg
                aria-hidden="true"
                realfilename="link-external.svg"
              />
            </span>
          </a>
        </div>
        <div
          class="article"
          data-testid="hc-article-body"
          role="presentation"
        >
          <p>
            body
          </p>
        </div>
      </div>
    </div>
    <footer
      class="c8"
    >
      <div
        class="c9"
      >
        <a
          class="c10"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
      </div>
    </footer>
  </div>
</div>
`;
